# rust-sdk

./: Cargo.toml
crates/mcp-client/src/: client.rs  lib.rs  service.rs
crates/mcp-client/src/transport/: mod.rs  sse.rs  stdio.rs
crates/mcp-core/src/: content.rs  handler.rs  lib.rs  prompt.rs  protocol.rs  resource.rs  role.rs  tool.rs
crates/mcp-macros/src/: lib.rs
crates/mcp-server/src/: errors.rs  lib.rs  router.rs
examples/apifox-mcp/: Cargo.toml  Readme.md
examples/apifox-mcp/src/: main.rs
examples/clients/: Cargo.toml
examples/clients/src/: clients.rs  sse.rs  stdio.rs  stdio_integration.rs
examples/macros/: Cargo.toml
examples/macros/src/: calculator.rs
examples/mcp-proxy/: Cargo.toml
examples/mcp-proxy/src/: main.rs
examples/servers/: Cargo.toml
examples/servers/src/: axum.rs  counter_server.rs  mcp-proxy.rs
examples/servers/src/common/: counter.rs  jsonrpc_frame_codec.rs
logs/: mcp-server.log.2025-03-07
