[package]
name = "mcp-proxy"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mcp-server = { path = "../../crates/mcp-server" }
mcp-client = { path = "../../crates/mcp-client" }
mcp-core = { path = "../../crates/mcp-core" }
mcp-macros = { path = "../../crates/mcp-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
clap = { version = "4.5.31", features = ["derive"] }
tower = { version = "0.4", features = ["timeout", "util"] }
tower-service = "0.3"

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio-util = { version = "0.7", features = ["io", "codec"]}
rand = { version = "0.8" }

[profile.release]
strip = true 
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"