[package]
name = "mcp-proxy"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
mcp-server = { path = "../../crates/mcp-server" }
mcp-client = { path = "../../crates/mcp-client" }
mcp-core = { path = "../../crates/mcp-core" }
mcp-macros = { path = "../../crates/mcp-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
clap = { version = "4.5.31", features = ["derive"] }
tower = { version = "0.4", features = ["timeout"] }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio-util = { version = "0.7", features = ["io", "codec"]}
rand = { version = "0.8" }

[profile.release]
opt-level = 3 # 或 "z" 以进行大小优化（可能会影响运行时性能）
lto = true      # 链接时优化（关键）
codegen-units = 1 # 减少代码大小。可能会增加编译时间。
panic = 'abort'   # 通过不包含panic处理来减少二进制大小